# lls

./: .dockerignore  .gitignore  Cargo.toml  DOCKERFILE  README.md  docker-compose.yml
server/: Cargo.toml
server/migrations/: 202601250804_Create_Client_Capabilitie.sql  202602150938_Add_Session_Timestamps.sql  202602151312_Add_Session_ID_Indexes.sql
server/src/: error_logging.rs  language_logging.rs  main.rs  message.rs  session.rs  utils.rs
server/src/css/: chat.css  sessions.css
server/src/html/: chat_view.rs  mod.rs  session_search.rs
