[package]
name = "lls"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "=0.15.7"
tokio = { version = "=1.49.0", features = ["rt-multi-thread", "macros"] }
axum = { version= "0.8.8", features = ["ws"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "=0.8.6", features = ["postgres", "runtime-tokio-native-tls", "time"] }
time = "=0.3.47"
futures = "=0.3.31"
html-escape = "=0.2.13"
tree_iterators_rs = "=3.5.2"
